--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<h1>Covid19 Tracker</h1>
 			<div>
 				<a href="#" class="active">Home</a>
-				<a href="higherOrderFunction.html">Weather</a>
+				<a href="weather.html">Weather</a>
 				<a href="help.html">Help</a>
 			</div>
 		<form>
